--- a/src/UI/styles/index.scss
+++ b/src/UI/styles/index.scss
@@ -25,8 +25,6 @@ html {
     // Prevents iOS from zooming/changing text size on orientation change
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
-    max-height: 100dvh;
-    overflow: hidden;
 }
 
 :root {
@@ -58,8 +56,6 @@ html {
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin: 0;
-    background-color: var(--primary);
-    overscroll-behavior-y: none;
 }
 
 .app-container {
